it seem to be fixed on iphone 4 but not on iphone 5

--- a/style.css
+++ b/style.css
@@ -530,7 +530,7 @@ label {
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation : portrait) and (-webkit-min-device-pixel-ratio : 2) {
 	.maxheight {
-		height: 1440px;
+		height: 1008px;
 	}
 }
 
